--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -139,7 +139,7 @@ select {
   width: 100%;
   padding: 0.5rem;
   border-radius: 0.2rem;
-  border: 0.1rem solid $color-gray;
+  border: 0.1rem solid $color-navy;
 }
 
 label {
