updated form style

--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -2,6 +2,10 @@
 @import "../../../styles/settings/colors";
 
 .textWithForm {
+  .sideWrapper {
+    padding: 1.2rem 0;
+  }
+
   // default layout
   .content {
     display: flex;
