--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -550,6 +550,9 @@
 .max-width-medium {
   max-width: $medium;
 }
+.max-width-title-medium {
+  max-width: $title-medium;
+}
 .max-width-wide {
   max-width: $wide;
 }
