updated global width helper class names

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -550,8 +550,8 @@
 .max-width-medium {
   max-width: $medium;
 }
-.max-width-title-medium {
-  max-width: $title-medium;
+.max-width-medium-wide {
+  max-width: $medium-wide;
 }
 .max-width-wide {
   max-width: $wide;
