--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -7,7 +7,7 @@ $fullhd: 1920px;
 $very-narrow: 36.25rem;
 $medium: 85.375rem;
 $wide: $fullhd;
-$title-medium: 60rem;
+$medium-wide: 60rem;
 
 // rem-sizes
 $size-05: 0.25rem;
