Added a medium wide width helper class for titles

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -550,6 +550,9 @@
 .max-width-medium {
   max-width: $medium;
 }
+.max-width-medium-wide {
+  max-width: $medium-wide;
+}
 .max-width-wide {
   max-width: $wide;
 }
