--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -6,6 +6,9 @@
   .heading {
     text-align: center;
     margin-bottom: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60rem;
   }
   .content {
     display: flex;
