fixed the centering issue for the heading of Text Grid With Media module

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -9,7 +9,7 @@
     text-align: center;
     flex-direction: column;
     padding: 2rem 0;
-    margin: 3rem 0 1rem 0;
+    margin: 3rem auto 1rem auto;
     text-align: center;
     h1,
     h2,
