added very narrow width style

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -541,6 +541,9 @@
 .width-100 {
   width: 100%;
 }
+.max-width-very-narrow {
+  max-width: $very-narrow;
+}
 .max-width-narrow {
   @include narrowWidth();
 }
