--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -3,7 +3,8 @@
 
 .textWithForm {
   .sideWrapper {
-    padding: 1.2rem 0;
+    padding: 1.875rem 2.375rem;
+    border-radius: 1rem;
   }
   .rowLayoutHeading {
     display: none;
@@ -78,8 +79,7 @@
         input,
         select {
           background-color: $color-lightgray;
-          padding: 0.75rem 1rem;
-          margin: 0.25rem 0;
+          margin: 0;
           box-sizing: border-box;
           border: unset;
         }
@@ -188,9 +188,12 @@
         select {
           background-color: $color-white !important;
           padding: 0.75rem 1rem;
-          margin: 0.25rem 0;
+          margin: 0;
           box-sizing: border-box;
           border: 0.1rem solid $color-black !important;
+        }
+        label {
+          margin: 0 0 .25rem 0;
         }
       }
     }
