Hide empty resource form title, change form styles

--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -21,7 +21,7 @@
 
 .form {
   background: $color-paleblue;
-  padding: 3rem;
+  padding: 1.875rem 2.375rem;
   height: min-content;
   border-radius: 1rem;
 
