--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -1,9 +1,6 @@
 @import "../../../styles/settings/colors";
 @import "../../../styles/settings/mixins";
 
-.heading {
-}
-
 .columns {
   display: grid;
   grid-template-columns: 100%;
@@ -90,6 +87,7 @@
   .title {
     font-weight: 200;
     color: $color-white;
+    padding-right: 1rem;
   }
 
   .hr {
