--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -14,17 +14,17 @@
   }
   .columnLayoutHeading,
   .rowLayoutHeading {
-      text-align: center;
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        &:last-child {
-          margin-bottom: .7rem;
-        }
+    text-align: center;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      &:last-child {
+        margin-bottom: 0.7rem;
       }
+    }
   }
   // default layout
   .content {
@@ -77,7 +77,7 @@
         margin: 0 auto;
         input,
         select {
-          background-color: $color-lightgray;
+          background-color: $color-white;
           margin: 0;
           box-sizing: border-box;
           border: unset;
@@ -92,7 +92,9 @@
       .rowLayoutHeading {
         display: block;
       }
-      .columnLayoutHeading, .textContent, .form {
+      .columnLayoutHeading,
+      .textContent,
+      .form {
         order: unset;
       }
     }
@@ -195,7 +197,7 @@
           border: 0.1rem solid $color-black !important;
         }
         label {
-          margin: 0 0 .25rem 0;
+          margin: 0 0 0.25rem 0;
         }
       }
     }
