added a form bg color

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -22,7 +22,7 @@ $color-mediumpurple: #6e0bdc;
 .bg-paleblue {
   background-color: #f0f6ff !important; // $color-paleblue: not pale enough...;
 }
-.bg-skyblue {
+.bg-skyblue-light {
   background-color: $color-paleblue !important;
 }
 .bg-lightblue {
