removed from background color from the bottom forms

--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -104,6 +104,9 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    .bg-skyblue-light {
+      background-color: transparent;
+    }
     & > * {
       flex-basis: 100%;
     }
