upddated bg color styles for form

--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -1,6 +1,9 @@
 @import "../../../styles/settings/mixins";
 @import "../../../styles/settings/colors";
 
+.bg-skyblue-light {
+  background-color: $color-paleblue;
+}
 .textWithForm {
   .sideWrapper {
     padding: 1.875rem 2.375rem;
