--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -23,7 +23,7 @@ $color-mediumpurple: #6e0bdc;
   background-color: #f0f6ff !important; // $color-paleblue: not pale enough...;
 }
 .bg-skyblue-light {
-  background-color: $color-paleblue !important;
+  background-color: $color-paleblue;
 }
 .bg-lightblue {
   background-color: $color-lightblue !important;
