--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -33,7 +33,7 @@
           padding-bottom: 0;
         }
       }
-      a {
+      span {
         font-weight: 600;
         color: $color-darkblue;
         margin-bottom: 1rem;
