Add text vertical alignment (text with card)

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -116,12 +116,16 @@
   align-items: unset !important;
 }
 
+.align-self-center {
+  align-self: center !important;
+}
 .align-self-end {
   align-self: end !important;
 }
 .align-self-start {
   align-self: start !important;
 }
+
 /*
   <<<<<<<<<<<<<<<<GRID LAYOUT CLASSES>>>>>>>>>>>>>>>>>
 */
