add safe margin to mobile first fold

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -29,6 +29,10 @@
   }
   .heading {
     max-width: 37.5rem;
+    margin-top: 1rem;
+    @include desktop () {
+      margin-top: unset;
+    }
   }
   .textContent {
     display: flex;
