updated link color for the generic card

--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -60,6 +60,7 @@
       display: block;
       font-weight: 600;
       font-size: 1rem;
+      color: $color-darkblue;
       span {
         position: relative;
         display: flex;
