--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -98,7 +98,7 @@
           border-top: solid;
           margin-left: 0.2rem;
           border-width: 0.2rem;
-          border-color: $color-navy;
+          border-color: $color-darkblue;
           transform: rotate(45deg);
         }
       }
