--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -73,7 +73,7 @@
           border-top: solid;
           margin-left: 0.2rem;
           border-width: 0.15rem;
-          border-color: $color-navy;
+          border-color: $color-darkblue;
           transform: rotate(45deg);
         }
       }
