updated link arrow issues

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -221,6 +221,9 @@ blog posts or anywhere where html is rendered */
   a {
     color: $color-lightblue;
     text-decoration: underline;
+    &.chevron-after {
+      text-decoration: none;
+    }
   }
 
   ol,
@@ -389,9 +392,9 @@ table {
   text-decoration: none;
   font-size: 1rem;
   font-weight: 600;
+  white-space: nowrap;
   &::after {
     content: ">";
-    display: inline-block;
     padding-left: 0.5rem;
   }
 }
