--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -9,6 +9,8 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 60rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
   .content {
     display: flex;
