changed form bg color

--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -21,6 +21,9 @@
   padding: 1.875rem 2.375rem;
   height: min-content;
   border-radius: 1rem;
+  .bg-lightblue {
+    background: $color-paleblue !important;
+  }
   form {
     display: grid;
     column-gap: 1rem;
