updated form bg color

--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -22,7 +22,7 @@
   height: min-content;
   border-radius: 1rem;
   &.bg-lightblue {
-    background: $color-paleblue !important;
+    background: $color-paleblue;
   }
   form {
     display: grid;
