--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -92,19 +92,19 @@
 .justify-content-center {
   justify-content: center !important;
 }
-
 .justify-content-flex-start {
   justify-content: flex-start !important;
 }
-
 .justify-content-flex-end {
   justify-content: flex-end !important;
+}
+.justify-content-space-between {
+  justify-content: space-between !important;
 }
 
 .align-items-flex-start {
   align-items: flex-start !important;
 }
-
 .align-items-flex-end {
   align-items: flex-end !important;
 }
