--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -26,9 +26,13 @@
     .filterPanel {
       grid-area: side;
       position: sticky;
+      width: calc(100vw - 1rem);
+      transform: translateX(-1rem);
+      padding: 0 1rem;
       top: 0;
       z-index: 2;
       background-color: white;
+      box-shadow: 0 .5rem 0.5rem -.5rem #0000005b;
       #mobileCategoryToggle {
         cursor: pointer;
         #chevron {
@@ -42,6 +46,10 @@
           &.flipped {
             transform: translateY(.25rem) rotate(225deg);
           }
+        }
+        legend {
+          padding: 0;
+          margin: 0;
         }
         @include desktop() {
           pointer-events: none;
@@ -75,7 +83,7 @@
         padding-top: 0;
       }
       & > fieldset {
-        margin-top: 1rem;
+        margin: 0;
         label {
           display: flex;
           align-items: center;
@@ -83,7 +91,6 @@
             cursor: pointer;
             color: $color-darkblue;
           }
-
           input {
             margin-right: .5rem;
             position: relative;
@@ -94,9 +101,16 @@
             margin-right: 0.5rem;
           }
         }
+        @include desktop() {
+          margin-top: 1rem;
+        }
       }
       @include desktop() {
         position: relative;
+        width: auto;
+        transform: unset;
+        padding: 0;
+        box-shadow: unset;
       }
     }
     .contentList {
