add top margin adjustment to anchored h tags

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -208,6 +208,18 @@ blog posts or anywhere where html is rendered */
   h5,
   h6 {
     margin: 0 0 0.7rem 0;
+
+    &[id] {
+      // anchor top margin fix
+      &::before {
+        display: block;
+        content: " ";
+        margin-top: -$navbar-height;
+        height: $navbar-height;
+        visibility: hidden;
+        pointer-events: none;
+      }
+    }
   }
 
   p {
