centered form button and form text for resource pages

--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -147,6 +147,9 @@
 }
 
 .marketoResource {
-  padding: 1rem;
-  border-radius: .5rem;
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+.mktoButtonRow {
+  text-align: center;
 }
