centered form button

--- a/styles/marketo.scss
+++ b/styles/marketo.scss
@@ -10,6 +10,9 @@
 .mktoButtonRow {
   width: 100% !important;
 }
+.mktoButtonRow {
+  text-align: center;
+}
 
 .mktoFieldDescriptor {
   margin: 0 !important;
