--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -30,6 +30,7 @@
     grid-template-columns: 1fr;
     div:last-of-type {
       grid-column: 1 / -1;
+      text-align: center;
     }
     @include desktop() {
       grid-template-columns: 1fr 1fr;
