redirects for reuqest demo pages

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -345,3 +345,10 @@
     }
   }
 }
+
+.mainNavigationContainer {
+  // overflow-y: scroll;
+  // @include desktop () {
+  //   overflow: unset;
+  // }
+}
