--- a/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
@@ -73,7 +73,68 @@
     }
     .filterPanel {
       grid-area: side;
+      position: sticky;
+      width: calc(100% + 2rem);
+      transform: translateX(-1rem);
+      padding: 0 1rem;
+      top: 0;
+      z-index: 2;
+      background-color: #fff;
+      padding-top: 6rem;
+      box-shadow: 0 0.5rem 0.5rem -0.5rem #0000005b;
 
+      @include desktop () {
+        position: sticky;
+        width: unset;
+        transform: unset;
+        padding: unset;
+        z-index: 2;
+        background-color: #fff;
+        padding-top: 0;
+        box-shadow: none;
+      }
+
+      .mobileCategoryToggle {
+        display: flex;
+        cursor: pointer;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        .chevron {
+          @include desktop () {
+            display: none;
+          }
+          height: 1rem;
+          width: 1rem;
+          margin-right: 1rem;
+          border-color: $color-black;
+          border-width: 0px 2px 2px 0px;
+          border-style: solid;
+          transform: translate(.5rem, -.25rem) rotate(45deg);
+          &.flipped {
+            transform: translate(.5rem, .25rem) rotate(225deg);
+          }
+        }
+        legend {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          @include desktop () {
+            align-items: unset;
+            justify-content: unset;
+            width: 100%;
+          }
+          padding: 0;
+          margin: 0;
+        }
+        @include desktop() {
+          pointer-events: none;
+          .chevron {
+            display: none;
+          }
+        }
+      }
       & > label,
       fieldset {
         display: flex;
@@ -91,14 +152,23 @@
         padding-top: 0;
       }
       & > fieldset {
-        height: 14rem;
+
+        &.open {
+          height: 14rem;
+          border-bottom: 1px solid whitesmoke;
+          @include desktop () {
+            height: 25rem;
+          }
+        }
         @include desktop() {
           padding: initial;
           height: 25rem;
         }
         overflow-y: scroll;
         legend {
-          margin-bottom: 1rem;
+          @include desktop () {
+            margin-bottom: 1rem;
+          }
         }
         label {
           display: flex;
@@ -183,5 +253,18 @@
         }
       }
     }
+  }
+}
+
+.filterOpen {
+  
+}
+
+.filterClosed {
+  position: absolute;
+  right: -9999999px;
+  @include desktop () {
+    position: relative;
+    right: 0;
   }
 }
