--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -306,7 +306,9 @@
       }
       flex-basis: 100%;
       padding-bottom: 2rem;
-      border-bottom: 0.1rem solid $color-gray;
+      @include desktop () {
+        border-bottom: 0.1rem solid $color-gray;
+      }
     }
   }
 
