--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -350,6 +350,7 @@
   height: 100vh;
   max-height: 100vh;
   width: 100%;
+  position: relative;
   @include desktop () {
     overflow: unset;
     height: unset;
