press release redirect, minor css for archives

--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -57,7 +57,7 @@
           }
         }
       }
-      #categoryCheckboxes {
+      .categoryCheckboxes {
         position: absolute;
         left: 0;
         padding: 0 0 .75rem 1rem;
