Fix image-related issues caused by Next.js upgrade

--- a/components/agility-pageModules/testimonialList/testimonialList.module.scss
+++ b/components/agility-pageModules/testimonialList/testimonialList.module.scss
@@ -251,7 +251,7 @@
       .gridItemLogoContainer {
         position: relative;
         .gridItemLogo {
-          height: 100%;
+          height: 100% !important;
         }
       }
       .gridItemText {
