--- a/components/agility-pageModules/archivesPageContent/archiveCard.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archiveCard.module.scss
@@ -29,8 +29,8 @@
       position: absolute !important;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100% !important;
+      height: 100% !important;
       img {
         max-height: unset !important;
         min-height: unset !important;
