--- a/components/agility-pageModules/awardsBanner/awardsBanner.module.scss
+++ b/components/agility-pageModules/awardsBanner/awardsBanner.module.scss
@@ -11,7 +11,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    & > div {
+    & > span {
+      height: 100% !important;
       display: block !important;
       &:only-child {
         height: 100%;
@@ -42,10 +43,10 @@
             margin-bottom: 1.5rem;
           }
           .featuredImage {
-            & > div {
+            & > span {
               &:only-child {
                 min-height: 6.25rem;
-                width: 100%;
+                width: 100% !important;
                 img {
                   object-fit: contain;
                   height: unset !important;
@@ -71,10 +72,10 @@
         display: flex;
         justify-content: center;
         width: 100%;
-        & > div {
+        & > span {
           &:only-child {
-            height: 100%;
-            width: 100%;
+            height: 100% !important;
+            width: 100% !important;
             img {
               object-fit: contain;
               height: 100% !important;
