--- a/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
@@ -7,7 +7,7 @@
   .highlightedPostBackgroundImage {
     & > * {
       display: block !important;
-      height: 100%;
+      height: 100% !important;
     }
     position: absolute !important;
     top: 0;
