--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -90,9 +90,9 @@
       @include desktop() {
         min-height: 25rem;
       }
-      div {
-        height: 100%;
-        width: 100%;
+      span {
+        height: 100% !important;
+        width: 100% !important;
       }
     }
   }
