Fix first fold background image size

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -177,7 +177,7 @@
   .backgroundImage {
     & > * {
       display: block !important;
-      height: 100%;
+      height: 100% !important;
     }
     position: absolute !important;
     top: 0;
