--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -42,7 +42,7 @@
   }
 
   // Main navigation link cta
-  &.navbar_navigationLink__3UVZD {
+  &.navbarCta {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
