--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -74,7 +74,7 @@
     @include desktop() {
       margin-top: initial;
     }
-    div {
+    span {
       width: 100%;
       height: 100%;
       position: unset !important;
