--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -11,7 +11,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    & > div {
+    & > span {
       &:only-child {
         height: 100%;
         display: block !important;
