--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -203,7 +203,7 @@
       max-width: 7.8125rem;
       max-height: 7.8125rem;
       overflow: hidden;
-      & > div {
+      & > span {
         &:only-child {
           border-radius: 50%;
         }
