--- a/components/agility-pageModules/callToAction/callToAction.module.scss
+++ b/components/agility-pageModules/callToAction/callToAction.module.scss
@@ -42,10 +42,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    & > div {
+    & > span {
       display: block !important;
       &:only-child {
-        height: 100%;
+        height: 100% !important;
         img {
           object-fit: cover;
           height: unset;
