--- a/components/agility-pageModules/infographic/infographic.module.scss
+++ b/components/agility-pageModules/infographic/infographic.module.scss
@@ -87,7 +87,7 @@
         .itemMedia {
           display: flex;
           justify-content: center;
-          & > div {
+          & > span {
             min-width: 6rem;
           }
           padding-bottom: 1rem;
@@ -112,7 +112,7 @@
         .itemMedia {
           display: flex;
           justify-content: center;
-          & > div {
+          & > span {
             min-width: 6rem;
           }
           padding-bottom: 1rem;
@@ -163,7 +163,7 @@
           font-size: 2.25rem;
         }
         .itemMedia {
-          & > div {
+          & > span {
             max-width: 6rem;
           }
         }
@@ -192,7 +192,7 @@
         justify-content: flex-end;
         align-items: center;
         margin-bottom: 1rem;
-        & > div {
+        & > span {
           min-width: 9.375rem;
           max-height: 9.375rem;
           img {
