--- a/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
+++ b/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
@@ -25,7 +25,7 @@
       position: relative;
       display: flex;
       margin-bottom: 1rem;
-      & > div {
+      & > span {
         border-radius: 50%;
         width: 100%;
         height: 100%;
