--- a/components/agility-pageModules/speakerList/speakerList.module.scss
+++ b/components/agility-pageModules/speakerList/speakerList.module.scss
@@ -31,7 +31,7 @@
         position: relative;
         display: flex;
         margin-bottom: 1rem;
-        & > div {
+        & > span {
           &:first-child {
             border-radius: 50%;
             img {
