--- a/components/agility-pageModules/modal/modal.module.scss
+++ b/components/agility-pageModules/modal/modal.module.scss
@@ -87,7 +87,7 @@
   width: 100%;
   height: 100%;
   z-index: 0;
-  & > div {
+  & > span {
     display: block;
     width: 100%;
     &:only-child {
