--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -15,6 +15,9 @@ a {
   cursor: pointer;
   color: inherit;
   text-decoration: none;
+  &:focus {
+    outline: 2px solid $color-lightblue !important;
+  }
 }
 
 a,
