Fix navbar triangles not appearing on focus

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -278,7 +278,7 @@
 
   // Triangle
   &:not(.disabled) {
-    &:hover {
+    &:hover, &:focus-within {
       @include desktop() {
         &::before {
           position: absolute;
