Add touchscreen link focus outline

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -28,6 +28,11 @@ a {
   &:focus-visible {
     outline: dotted 0.15rem $color-mediumblue;
   }
+  @media (pointer: coarse) {
+    &:hover {
+      outline: dotted 0.15rem $color-mediumblue;
+    }
+  }
 }
 
 p {
