Add tab outline to generic card + outline mixin

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -110,7 +110,7 @@
   -webkit-appearance: none;
 
   &:focus {
-    outline: dotted 0.15rem $color-mediumblue;
+    @include outline();
     &:not(:focus-visible) {
       outline: none;
     }
