--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -26,11 +26,14 @@ a {
   color: inherit;
   text-decoration: none;
   &:focus-visible {
-    outline: dotted 0.15rem $color-mediumblue;
+    @include outline();
+    .genericCard {
+      @include outline();
+    }
   }
   @media (pointer: coarse) {
     &:hover {
-      outline: dotted 0.15rem $color-mediumblue;
+      @include outline();
     }
   }
 }
