--- a/components/breadcrumbs/breadcrumbs.module.scss
+++ b/components/breadcrumbs/breadcrumbs.module.scss
@@ -1,9 +1,13 @@
 @import "../../styles/settings/colors";
+@import "../../styles/settings/mixins";
 
 .breadcrumbs {
-    display: flex;
+    display: none;
     gap: .75rem;
     margin-bottom: 1rem;
+    @include desktop() {
+        display: flex;
+    }
     div {
         p {
             display: inline;
