--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -58,7 +58,8 @@
     min-width: 14.0625rem;
     .textItemMedia {
       max-width: 7.5rem;
-      min-height: 7.5rem;
+      min-height: 4.5rem;
+      padding-bottom: 1rem;
       &.textItemMediaSmall {
         max-width: 5.625rem;
         max-height: 5.625rem;
@@ -99,10 +100,31 @@
       .textItemMedia {
         min-width: 7.5rem;
         margin-right: 2.5rem;
+        img {
+          height: auto !important;
+          min-height: auto !important;
+        }
       }
     }
   }
   .textItemHeading {
     margin-bottom: 0.625rem;
+  }
+}
+@include tablet {
+  .is-2-larger-gap {
+    flex: 0 0 calc(50% - 2rem);
+  }
+  .is-3-larger-gap {
+    flex: 0 0 calc(33.3333% - 2rem);
+  }
+  .is-4-larger-gap {
+    flex: 0 0 calc(25% - 2rem);
+  }
+  .is-5-larger-gap {
+    flex: 0 0 calc(20% - 2rem);
+  }
+  .is-7-larger-gap {
+    flex: 0 0 calc(14.2857% - 2rem);
   }
 }
