--- a/components/agility-pageModules/awardsPageContent/awardsPageContent.module.scss
+++ b/components/agility-pageModules/awardsPageContent/awardsPageContent.module.scss
@@ -21,11 +21,11 @@
     .awardImage {
       display: flex;
       margin-bottom: 1rem;
-      div {
-        width: 100%;
-        height: 100%;
-        max-height: 7.5rem;
-        min-height: 7.5rem;
+      span {
+        width: 100% !important;
+        height: 100% !important;
+        max-height: 7.5rem !important;
+        min-height: 7.5rem !important;
 
         img {
           min-width: unset !important;
@@ -66,7 +66,7 @@
       .awardImage {
         margin-bottom: unset;
         img {
-          margin: 0 3.5rem 0 auto !important;
+          // margin: 0 3.5rem 0 auto !important;
         }
       }
       .awardLink {
