Add breadcrumbs to resource pages

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -506,6 +506,9 @@
 .pb-4 {
   padding-bottom: $size-4 !important;
 }
+.pb-5 {
+  padding-bottom: $size-5 !important;
+}
 .pb-6 {
   padding-bottom: $size-6 !important;
 }
