updated style and fixed dates for events

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -244,7 +244,7 @@ blog posts or anywhere where html is rendered */
   }
 
   a {
-    color: $color-lightblue;
+    color: $color-darkblue;
     text-decoration: underline;
     &.chevron-after {
       text-decoration: none;
