updated text deoration style for link of text with media

--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -96,7 +96,7 @@
         }
       }
       a {
-        text-decoration: unset;
+        //text-decoration: unset;
         color: $color-darkblue;
       }
     }
