Form loader style/text changes for Safari

--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -9,6 +9,9 @@
     button {
       min-width: 8rem;
     }
+    label {
+      visibility: hidden;
+    }
   }
   .sideWrapper {
     padding: 1.875rem 2.375rem;
