--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -15,9 +15,13 @@ a,
 button,
 li {
   &:focus {
-    outline: none;
-    /* outline: 4px solid rgba(0, 125, 250, 0.6);
-    outline-offset: 1px; */
+    @include outline();
+    &:not(:focus-visible) {
+      outline: none;
+    }
+  }
+  &:focus-visible {
+    @include outline();
   }
 }
 
@@ -25,8 +29,17 @@ a {
   cursor: pointer;
   color: inherit;
   text-decoration: none;
+  &:focus {
+    .genericCard {
+      @include outline();
+    }
+    &:not(:focus-visible) {
+      .genericCard {
+        outline: none;
+      }
+    }
+  }
   &:focus-visible {
-    @include outline();
     .genericCard {
       @include outline();
     }
